--- a/SOURCE/CLIO/BESPOKE/MFJ/MICROSOFT/ASP/mjp_edi_link_update_help.htm
+++ b/SOURCE/CLIO/BESPOKE/MFJ/MICROSOFT/ASP/mjp_edi_link_update_help.htm
@@ -3,9 +3,9 @@
    <meta http-equiv="content-type" content="text/html">
    <link rel="stylesheet" type="text/css" href="ics_style.css">
 </head>
-<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('EDI Payer Configuration - Insert Payer Help');">
+<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('EDI Link Configuration - Update Link Help');">
 <p class="clsNormal">
-Insert EDI payer help.
+Update EDI link help.
 </p>
 </body>
 </html>
