--- a/SOURCE/CLIO/BESPOKE/MFJ/MICROSOFT/ASP/mjp_edi_link_delete_help.htm
+++ b/SOURCE/CLIO/BESPOKE/MFJ/MICROSOFT/ASP/mjp_edi_link_delete_help.htm
@@ -3,8 +3,9 @@
    <meta http-equiv="content-type" content="text/html">
    <link rel="stylesheet" type="text/css" href="ics_style.css">
 </head>
-<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('EDI Payer Configuration - Help');">
+<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('EDI Link Configuration - Delete Link Help');">
 <p class="clsNormal">
-Select EDI payer help.
+Delete EDI link help.
 </p>
+</body>
 </html>
