--- a/SOURCE/CLIO/BESPOKE/MFJ/MICROSOFT/ASP/mjp_edi_link_insert_help.htm
+++ b/SOURCE/CLIO/BESPOKE/MFJ/MICROSOFT/ASP/mjp_edi_link_insert_help.htm
@@ -3,9 +3,9 @@
    <meta http-equiv="content-type" content="text/html">
    <link rel="stylesheet" type="text/css" href="ics_style.css">
 </head>
-<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('EDI Payer Configuration - Delete Payer Help');">
+<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('EDI Link Configuration - Insert Link Help');">
 <p class="clsNormal">
-Delete EDI payer help.
+Insert EDI link help.
 </p>
 </body>
 </html>
