--- a/SOURCE/CLIO/BESPOKE/MFJ/MICROSOFT/ASP/mjp_edi_link_select_help.htm
+++ b/SOURCE/CLIO/BESPOKE/MFJ/MICROSOFT/ASP/mjp_edi_link_select_help.htm
@@ -3,9 +3,8 @@
    <meta http-equiv="content-type" content="text/html">
    <link rel="stylesheet" type="text/css" href="ics_style.css">
 </head>
-<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('EDI Payer Configuration - Update Payer Help');">
+<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('EDI Link Configuration - Help');">
 <p class="clsNormal">
-Update EDI payer help.
+Select EDI link help.
 </p>
-</body>
 </html>
