--- a/SOURCE/VDS/BASE/MICROSOFT/ASP/ics_val_sbm_help.htm
+++ b/SOURCE/VDS/BASE/MICROSOFT/ASP/ics_val_sbm_help.htm
@@ -5,7 +5,7 @@
 </head>
 <body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('Validation Submit - Help');">
 <p class="clsNormal">
-This function allows the user to submit the LADS Validation to batch.
+This function allows the user to submit the VDS Validation to batch.
 </p>
 </body>
 </html>
