--- a/SOURCE/PTS/BASE/MICROSOFT/ASP/pts_geo_cnty_config_help.htm
+++ b/SOURCE/PTS/BASE/MICROSOFT/ASP/pts_geo_cnty_config_help.htm
@@ -3,9 +3,9 @@
    <meta http-equiv="content-type" content="text/html">
    <link rel="stylesheet" type="text/css" href="ics_style.css">
 </head>
-<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('Geographic Zone Maintenance - Help');">
+<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('Geographic Country Maintenance - Help');">
 <p class="clsNormal">
-Geographic zone maintenance help.
+Geographic country maintenance help.
 </p>
 </body>
 </html>
