--- a/SOURCE/PSA/BASE/MICROSOFT/ASP/psa_sac_config_help.htm
+++ b/SOURCE/PSA/BASE/MICROSOFT/ASP/psa_sac_config_help.htm
@@ -3,9 +3,9 @@
    <meta http-equiv="content-type" content="text/html">
    <link rel="stylesheet" type="text/css" href="ics_style.css">
 </head>
-<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('Schedule Type Maintenance - Help');">
+<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('Schedule Activity Maintenance - Help');">
 <p class="clsNormal">
-Schedule type maintenance help.
+Schedule activity maintenance help.
 </p>
 </body>
 </html>
