--- a/SOURCE/PSA/BASE/MICROSOFT/ASP/psa_cfg_config_help.htm
+++ b/SOURCE/PSA/BASE/MICROSOFT/ASP/psa_cfg_config_help.htm
@@ -3,9 +3,9 @@
    <meta http-equiv="content-type" content="text/html">
    <link rel="stylesheet" type="text/css" href="ics_style.css">
 </head>
-<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('Line Maintenance - Help');">
+<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('Line Configuration Maintenance - Help');">
 <p class="clsNormal">
-Line maintenance help.
+Line configuration maintenance help.
 </p>
 </body>
 </html>
