--- a/SOURCE/LICS/BASE/MICROSOFT/ASP/ics_fil_monitor_select_help.htm
+++ b/SOURCE/LICS/BASE/MICROSOFT/ASP/ics_fil_monitor_select_help.htm
@@ -3,8 +3,8 @@
    <meta http-equiv="content-type" content="text/html">
    <link rel="stylesheet" type="text/css" href="ics_style.css">
 </head>
-<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('File Processing - Help');">
+<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('File Monitor - Help');">
 <p class="clsNormal">
-File processing help.
+File monitor help.
 </p>
 </html>
