--- a/SOURCE/QV/BASE/MICROSOFT/ASP/qvi_das_config_help.htm
+++ b/SOURCE/QV/BASE/MICROSOFT/ASP/qvi_das_config_help.htm
@@ -3,9 +3,9 @@
    <meta http-equiv="content-type" content="text/html">
    <link rel="stylesheet" type="text/css" href="ics_style.css">
 </head>
-<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('Fact Maintenance - Help');">
+<body class="clsBody03" scroll="auto" onLoad="parent.setHelpHeading('Dashboard Maintenance - Help');">
 <p class="clsNormal">
-Fact maintenance help.
+Dashboard maintenance help.
 </p>
 </body>
 </html>
